force-app/main/default/objects/System_Field__c/System_Field__c.object-meta.xml
<CustomObject>
    <description>MIBOS Requirements App: The fields that need to be configured to support requirements.</description>
    <label>System Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>