force-app/main/default/objects/System_Field__c/fields/Change_Tracking_Required__c.field-meta.xml
<CustomField>
    <fullName>Change_Tracking_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Tracking Required</label>
    <type>Checkbox</type>
</CustomField>