force-app/main/default/objects/System_Field__c/fields/Field_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_Description__c</fullName>
    <label>Field Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>