force-app/main/default/objects/System_Field__c/fields/Field_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Field_Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Is Required</label>
    <type>Checkbox</type>
</CustomField>