force-app/main/default/objects/System_Field__c/fields/Field_is_Visible_to_User__c.field-meta.xml
<CustomField>
    <fullName>Field_is_Visible_to_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be used to indicate if the field is on a page layout, or used behind-the-scenes in code; helps drive assessment on whether to keep the field or not.</description>
    <inlineHelpText>This field can be used to indicate if the field is on a page layout, or used behind-the-scenes in code; helps drive assessment on whether to keep the field or not.</inlineHelpText>
    <label>Field is Visible to User?</label>
    <type>Checkbox</type>
</CustomField>