force-app/main/default/objects/System_Field__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>