force-app/main/default/objects/System_Field__c/fields/Inbound_Integration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Integration_Notes__c</fullName>
    <description>If this field is used in an integration, how is it used? What details should be known?</description>
    <inlineHelpText>If this field is used in an integration, how is it used? What details should be known?</inlineHelpText>
    <label>Inbound Integration Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>