force-app/main/default/objects/System_Field__c/fields/MIBOSDataMigrationName__c.field-meta.xml
<CustomField>
    <fullName>MIBOSDataMigrationName__c</fullName>
    <label>MIBOSDataMigrationName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>