force-app/main/default/objects/System_Field__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>