force-app/main/default/objects/System_Field__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Great Plains</fullName>
            </value>
            <value>
                <fullName>MS Access</fullName>
            </value>
            <value>
                <fullName>MS CRM</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SFDC (Legacy)</fullName>
            </value>
            <value>
                <fullName>SFDC (New)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>