force-app/main/default/objects/System_Field__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>BigMachines</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Intacct</fullName>
            </value>
            <value>
                <fullName>OpenAir</fullName>
            </value>
            <value>
                <fullName>Financial Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>