force-app/main/default/objects/System_Field__c/fields/Technical_Name__c.field-meta.xml
<CustomField>
    <fullName>Technical_Name__c</fullName>
    <inlineHelpText>The system name or API name for the field.</inlineHelpText>
    <label>Technical Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>