force-app/main/default/objects/System_Field__c/fields/Transformation__c.field-meta.xml
<CustomField>
    <fullName>Transformation__c</fullName>
    <label>Transformation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>