force-app/main/default/objects/System_Field__c/fields/Transformation_Required__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the data in this field need to be transformed before being loaded?</inlineHelpText>
    <label>Transformation Required</label>
    <type>Checkbox</type>
</CustomField>