force-app/main/default/objects/System_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Technical_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Object__c</columns>
    <columns>System__c</columns>
    <columns>Field_Is_Required__c</columns>
    <columns>Field_is_Visible_to_User__c</columns>
    <columns>Transformation__c</columns>
    <columns>Transformation_Required__c</columns>
    <columns>Number_of_Records_Field_is_Populated_On__c</columns>
    <columns>Percent_of_Records_Field_Is_Populated_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>