force-app/main/default/objects/System_Field__c/listViews/All_Case_System_Fields.listView-meta.xml
<ListView>
    <fullName>All_Case_System_Fields</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Technical_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Object__c</columns>
    <columns>System__c</columns>
    <columns>Field_Is_Required__c</columns>
    <columns>Field_is_Visible_to_User__c</columns>
    <columns>Transformation__c</columns>
    <columns>Number_of_Records_Field_is_Populated_On__c</columns>
    <columns>Percent_of_Records_Field_Is_Populated_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Case,Case Comment</value>
    </filters>
    <label>All Case System Fields</label>
    <language>en_US</language>
</ListView>