force-app/main/default/objects/System_Field__c/listViews/All_Contract_System_Fields.listView-meta.xml
<ListView>
    <fullName>All_Contract_System_Fields</fullName>
    <columns>NAME</columns>
    <columns>Technical_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>System__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Field_Is_Required__c</columns>
    <columns>Change_Tracking_Required__c</columns>
    <columns>Transformation__c</columns>
    <columns>Field_Description__c</columns>
    <columns>Inbound_Integration_Notes__c</columns>
    <columns>Number_of_Records_Field_is_Populated_On__c</columns>
    <columns>Percent_of_Records_Field_Is_Populated_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Contract</value>
    </filters>
    <label>All Contract System Fields</label>
    <language>en_US</language>
</ListView>