force-app/main/default/objects/System_Field__c/listViews/All_Integration_Fields.listView-meta.xml
<ListView>
    <fullName>All_Integration_Fields</fullName>
    <columns>NAME</columns>
    <columns>Field_Type__c</columns>
    <columns>Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_System__c</columns>
    <columns>Inbound_Integration_Notes__c</columns>
    <columns>Transformation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inbound_Integration_Notes__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Integration Fields</label>
    <language>en_US</language>
</ListView>