force-app/main/default/objects/System_Field__c/listViews/All_Sales_Order_System_Fields.listView-meta.xml
<ListView>
    <fullName>All_Sales_Order_System_Fields</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Technical_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>System__c</columns>
    <columns>Transformation__c</columns>
    <columns>Inbound_Integration_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Sales Order</value>
    </filters>
    <label>All Sales Order System Fields</label>
    <language>en_US</language>
</ListView>